[package]
name = "client"
version = "0.1.0"
edition = "2021"

# edition.workspace = true
# version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1.0.68"
